# MCQ-Gen

./: .gitignore  README.md  pyproject.toml  run_app.bat  streamlit_app.py  wrong_ids.json
configs/: default.yaml
mcqgen/: cli.py  explain.py  generate.py  io_utils.py  llm_client.py  llm_schemas.py  logging_utils.py  mock_llm.py  pages.py  pdf_export.py  pdf_extract.py  pipeline.py  postprocess.py  run_utils.py  text_utils.py
prompts/: 3_CASE_vignettes.txt  default.txt  explain_v1.txt  mcq_generate_v1.txt
prompts/fixed_prompts/: mcq_fixed_v1.txt  sata_fixed_v1.txt
runs/2025-12-30_01-55-58__e5_3_Osteoporosis/: manifest.json  output.json  pages.jsonl
runs/2025-12-30_02-09-04__e5_3_Osteoporosis/: chunks.jsonl  manifest.json  output.json
